# Golf_Simulator

./: .gitignore  LICENSE  README.md  mc_results.csv  pyproject.toml
.github/workflows/: ci.yml
config/: alignment_schedule.csv  card_retention.yaml  monday_chase.yaml  qschool.yaml  season_schedule.csv  settings.yaml
data/custom_fields/: example_field.csv
data/seasons/: yr2021.csv  yr2024.csv
docs/: USER_GUIDE.md
golf_data/: config.py  distribution_calculator.py  yr2022.csv  yr2023.csv  yr2025.csv
src/golf_simulator/: __init__.py  card_retention.py  card_retention_settings.py  cli.py  data_loading.py  diagnostics.py  distributions.py  domain.py  monday_chase.py  monday_chase_settings.py  monte_carlo.py  player_field.py  points.py  qschool.py  qschool_settings.py  schedule.py  season.py  settings.py  weights.py
tests/: test_card_retention.py  test_cli.py  test_data_loading.py  test_distributions.py  test_domain.py  test_monday_chase.py  test_player_field.py  test_points.py  test_qschool.py  test_schedule.py  test_season.py  test_settings.py  test_smoke_end_to_end.py  test_weights.py
